ISSUE #583 - Improve expand/collapse performance, add highlighting to filtering

--- a/frontend/components/tree/css/tree.css
+++ b/frontend/components/tree/css/tree.css
@@ -87,6 +87,7 @@ tree .parentOfInvisible {
 /** Tree filter list **************************************************************************************************/
 tree .filterNode {
   height: 41px;
+  cursor: pointer !important;
 }
 
 tree .filterNode div {
